fix: z-index header__menu + story

--- a/blocks/header/header__menu.css
+++ b/blocks/header/header__menu.css
@@ -14,4 +14,5 @@
   position: absolute;
   right: 0;
   top: 0;
+  z-index: 1;
 }
